--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 </body>
 
+<!--[if IE]><script type="text/javascript" src="../j/ie-canvas-polyfill.js"></script><![endif]-->
 <script type="text/javascript" src="j/puzzle.js"></script>
 <script type="text/javascript" src="j/puzzle-timer.js"></script>
 
