--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<header>
 		<nav>
-			<div id="logo"></div>
+			<a href="index.html"><div id="logo"></div></a>
 			<ol>
 				<li><a href="#">Introduction</a></li><li><a href="#">Digital Exhibition</a></li><li><a href="#">Gallery</a></li><li><a href="#">Games</a></li>
 			</ol>
@@ -36,7 +36,7 @@
 					<h6>Your Reward</h6>
 					<p>A royalty-free, downloadable .zip of Boccioni's artwork featured on this site</p>
 				</div>
-				<div class="cta" onclick="startTimer(); init();">
+				<div class="cta" class="ds" onclick="startTimer(); init();">
 					<div class="cta-puz">
 						<p id="cta-puz-play">Play Puzzle</p>
 					</div>
