--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Umberto Boccioni: A Digital Experience | Games: Self-Portrait Puzzle</title>
 	<link rel="stylesheet" href="c/puzzle.css" />
 </head>
@@ -36,7 +37,7 @@
 					<h6>Your Reward</h6>
 					<p>A royalty-free, downloadable .zip of Boccioni's artwork featured on this site</p>
 				</div>
-				<div class="cta" onclick="startTimer(); init();">
+				<div class="cta" onclick="init();">
 					<div class="cta-puz">
 						<p id="cta-puz-play">Play Puzzle</p>
 					</div>
@@ -51,7 +52,7 @@
 </body>
 
 <!--[if IE]><script type="text/javascript" src="../j/ie-canvas-polyfill.js"></script><![endif]-->
-<script type="text/javascript" src="j/puzzle.js"></script>
 <script type="text/javascript" src="j/puzzle-timer.js"></script>
+<script type="text/javascript" src="j/puzzle.js"></script>
 
 </html>
