--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Umberto Boccioni: A Digital Experience | Games: Self-Portrait Puzzle</title>
-	<link rel="stylesheet" href="c/puzzle.css" />
+	<link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 
@@ -23,7 +23,7 @@
 					<h6>What Is This?</h6>
 					<p>A block-swapping puzzle game where you must re-complete the image before the timer runs out!</p>
 					<p id="timer">
-						<img id="clock" src="i/o/c.png" />
+						<img id="clock" src="images/c.png" />
 						<time>
 							<a id="mins">5</a>:<a id="secs">00</a>
 						</time>
@@ -52,7 +52,6 @@
 </body>
 
 <!--[if IE]><script type="text/javascript" src="../j/ie-canvas-polyfill.js"></script><![endif]-->
-<script type="text/javascript" src="j/puzzle-timer.js"></script>
-<script type="text/javascript" src="j/puzzle.js"></script>
+<script type="text/javascript" src="js/blockswapper_v01.js"></script>
 
 </html>
