Remove and ingore .DS_Store
As titled

--- a/lab/index.html
+++ b/lab/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8" lang="en">
 <title>Block-Swap Lab - Version: 0.3.6</title>
 <link rel="stylesheet" href="css/styles.css" />
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
@@ -11,7 +11,7 @@
 	<main id="content" class="cf">				
 		<div id="puzzlebox">
 			<div id="glass">
-					<div id="lamp" data="image"></div>
+					<div id="lamp"></div>
 					<div id="mask"></div>
 			</div>
 			<canvas id="puzzle" width="640" height="400"></canvas>
